Add navigation nav-belt

--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,171 @@ a:hover {
   min-width: 1000px;
   display: block;
 }
+
+header {
+  background-color: #232f3e;
+  height: 99px;
+}
+
+.nav-left {
+  position: relative;
+  float: left;
+  width: auto;
+  display: inline-block;
+}
+
+.nav-right {
+  position: relative;
+  float: right;
+  width: auto;
+  display: inline-block;
+}
+
+.nav-fill {
+  width: auto;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+#nav-logo {
+  padding: 11px 18px 0 24px;
+  position: relative;
+  width: 192px;
+}
+
+#nav-logo .nav-logo-link {
+  background: transparent url('../img/logo.png') no-repeat top left;
+  background-size: 102px;
+  width: 192px;
+  height: 32px;
+  display: block;
+}
+
+#nav-logo .nav-logo-tagline {
+  color: #48a3c6;
+  position: absolute;
+  top: 31px;
+  left: 93px;
+  font-size: 11px;
+  line-height: 11px;
+  font-family: arial, sans-serif;
+  font-weight: 700;
+}
+
+#nav-logo .nav-logo-tagline:hover {
+  color: #ffffff;
+}
+
+#nav-holiday {
+  top: 9px;
+  position: relative;
+  background-image: url('../img/fathers_day.jpg');
+  width: 400px;
+  height: 39px;
+}
+
+#nav-holiday a {
+  display: block;
+  height: 100%;
+}
+
+#nav-search {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  padding-top: 11px;
+  padding-right: 25px;
+}
+
+#nav-search input {
+  width: 100%;
+}
+
+#nav-search .nav-left {
+  height: 35px;
+  background-color: #f3f3f3;
+  border-radius: 4px 0 0 4px;
+  border: 1px solid #cdcdcd;
+  overflow: hidden;
+}
+
+#nav-search .nav-left:hover {
+  background-color: #dadada;
+  border-left-color: #dadada;
+  border-top-color: #dadada;
+  border-bottom-color: #dadada;
+}
+
+#nav-search .nav-search-label {
+  color: #777;
+  display: block;
+  font-size: 12px;
+  line-height: 33px;;
+  margin-right: 21px;
+  margin-left: 10px;
+}
+
+#nav-search .nav-left i {
+  position: absolute;
+  top: 10px;
+  right: 9px;
+  color: #a0a0a0;
+  font-size: 11px;
+}
+
+#nav-search select {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  opacity: 0;
+  height: 35px;
+  display: block;
+  outline: none;
+  cursor: pointer;
+}
+
+#nav-search .nav-fill {
+  height: 35px;
+  overflow: hidden;
+}
+
+#nav-search .nav-fill input {
+  border: none;
+  height: 35px;
+  padding: 5px 10px;
+  font-size: 15px;
+  color: #111;
+  outline: none;
+}
+
+#nav-search .nav-right {
+  background-color: #febd69;
+  width: 45px;
+  height: 35px;
+  border-radius: 0 4px 4px 0;
+}
+
+#nav-search .nav-right:hover {
+  background-color: #f3a847;
+}
+
+#nav-search .nav-right i {
+  position: absolute;
+  top: 5px;
+  right: 13px;
+  color: #333;
+  font-size: 22px;
+  opacity: 0.9;
+}
+
+#nav-search .nav-right input {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: block;
+  outline: none;
+  cursor: pointer;
+  background: none;
+  border: none;
+  text-indent: -1000px;
+}
