Add featured products

--- a/css/style.css
+++ b/css/style.css
@@ -297,3 +297,142 @@ header {
 #promo .carousel {
   margin-top: -2px;
 }
+
+.col-lg-3 {
+  padding: 0 7px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+h2 {
+  color: #111;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.3;
+  padding-bottom: 15px;
+}
+
+h3 {
+  color: #111;
+  font-size: 28px;
+  font-weight: 500;
+}
+
+.btn {
+  height: 29px;
+  padding: 2px 20px;
+  background: linear-gradient(to bottom,#f7dfa5,#f0c14b);
+  border-color: #a88734 #9c7e31 #846a29;
+  color: #111;
+  border-width: 1px;
+  border-style: solid;
+  cursor: pointer;
+  font-size: 13px;
+  box-shadow: 0 1px 0 rgba(255,255,255,.4) inset;
+  border-radius: 3px;
+}
+
+.btn:hover {
+  border-color: #a88734 #9c7e31 #846a29;
+  background: linear-gradient(to bottom,#f5d78e,#eeb933);
+  color: #111;
+}
+
+#products {
+  padding: 0 0 60px 0;
+}
+
+#products .col {
+  background: rgba(19,19,4,.04);
+  padding: 15px;
+  min-height: 578px;
+  position: relative;
+}
+
+#products h2 {
+  margin: 0;
+}
+
+#products img {
+  max-width: 100%;
+}
+
+#products .thumbnail {
+  display: inline-block;
+  padding: 0;
+  border: none;
+  margin: 8px;
+  background: none;
+}
+
+#products .thumbnail:hover {
+  text-decoration: none;
+}
+
+#products .thumbnail .caption {
+  padding: 0;
+  margin: 12px 0 4px 0;
+  display: inline-block;
+  color: #111;
+  font-size: 13px;
+}
+
+#products #welcome {
+  padding-top: 80px;
+}
+
+#products #welcome h2 {
+  font-size: 26px;
+}
+
+#products #welcome p {
+  font-size: 13px;
+  color: #111;
+  margin-bottom: 60px;
+}
+
+#products #welcome .btn {
+  width: 100%;
+}
+
+#products #amazon-basics img {
+  max-width: 151px;
+}
+
+#products #dress img {
+  max-width: 200px;
+}
+
+#products #deal-day {
+  margin-top: 20px;
+  position: relative;
+  min-height: 250px !important;
+}
+
+#products #deal-day h2 {
+  margin-bottom: 15px;
+}
+
+#products #deal-day h3 {
+  margin: 0;
+  line-height: 26px;
+}
+
+#products #deal-day img {
+  max-width: 88px;
+  position: absolute;
+  right: 30px;
+  top: 50px;
+}
+
+#products .footer {
+  position: absolute;
+  bottom: 0;
+  border-top: 1px solid #e7e7e7;
+  width: 90%;
+  padding: 17px 0 17px;
+  font-size: 13px;
+  color: #555;
+}
