--- a/css/style.css
+++ b/css/style.css
@@ -436,3 +436,26 @@ h3 {
   font-size: 13px;
   color: #555;
 }
+
+footer a {
+  color: #fff;
+}
+
+footer .top {
+  background: #37475a;
+}
+
+footer .top a {
+  padding: 17px;
+  width: 100%;
+  display: inline-block;
+}
+
+footer .top a:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
+footer .top:hover {
+  background: #485769;
+}
